<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_margin_16"
        app:cardBackgroundColor="@color/catbreedsWhite"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_margin_16">

                <TextView
                    android:id="@+id/txtName"
                    style="@style/Catbreeds.Txt.TextViewTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    tools:text="Persa" />

                <TextView
                    android:id="@+id/txtMore"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/sofadi_one_regular"
                    android:gravity="center_vertical"
                    android:text="@string/item_cat_list_txt_more"
                    android:textColor="@color/catbreedsPrincipal" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgCat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_cat_image"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:transitionName="sharedElementImageView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_margin_16"
                android:orientation="horizontal">

                <TextView
                    style="@style/Catbreeds.Txt.TextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_margin_8"
                    android:text="@string/item_cat_list_txt_country" />

                <TextView
                    android:id="@+id/txtCountry"
                    style="@style/Catbreeds.Txt.TextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_margin_16"
                    android:ellipsize="end"
                    android:maxWidth="100dp"
                    android:maxLines="1" />

                <TextView
                    style="@style/Catbreeds.Txt.TextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dp_margin_8"
                    android:text="@string/item_cat_list_txt_intelligence" />

                <TextView
                    android:id="@+id/txtintelligence"
                    style="@style/Catbreeds.Txt.TextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>